--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  </button>
 		  <a href="./pages/contact.html">
 			  <button class="header__call_to_action custom_btn blue_btn">
-				  Get Started
+				  Commencer
 			  </button>
 		  </a>
 		</header>
@@ -72,7 +72,7 @@
 				</p>
 				<a href="./pages/services.html">
 					<button class="mini__hero hero__calltoaction custom_btn blue_btn on_scroll">
-						Learn More
+						Découvrir
 					</button>
 				</a>
 			</div>
@@ -135,16 +135,19 @@
 	  	<section class="team container">
 			<div class="team__box1">
 				<div class="team__box1__subtitle tb1 on_scroll from_left">
-					meet our team
+					<!-- meet our team -->
+					Notre équipe
 				</div>
 				<div class="tb1 on_scroll from_left team__box1__title">
-					Get To Know Us
+					Qui sommes-nous ? 
 				</div>
 				<div class="tb1 on_scroll from_left team__box1__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
 				</div>
 				<a href="./pages/a_propos.html" class="tb1 on_scroll from_left team__box1__button">
-					<button class="white_btn custom_btn">Learn More</button>
+					<button class="white_btn custom_btn">
+						En savoir plus
+					</button>
 				</a>
 			</div>
 			<div class="team__box2__lol">
@@ -287,7 +290,7 @@
 	  	<section class="faq container">
 			<div class="faq-box">
 				<p class="faq-box__title">
-					Frequently Asked Questions
+				Questions fréquentes
 				</p>
 				<p class="faq-box__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
@@ -352,13 +355,15 @@
 			</div>
 			<div class="git-box">
 				<p class="git-box__title">
-					Get In Touch
+				Contactez-nous
 				</p>
 				<p class="git-box__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus 
 				</p>
 				<a href="./pages/contact.html" class="git-box__btn">
-					<button class="blue_btn custom_btn on_scroll">Contact Us</button>
+					<button class="blue_btn custom_btn on_scroll">
+						Nous contacter
+					</button>
 				</a>
 			</div>
 		</section>	
