--- a/pages/a_propos.html
+++ b/pages/a_propos.html
@@ -33,7 +33,7 @@
 			</svg>
 		  </button>
 		  <button class="header__call_to_action custom_btn blue_btn"><a href="#"></a>
-			  Get Started
+			  Commencer
 		  </button>
 	  </header>
 	  <div class="mobile-nav">
@@ -61,7 +61,9 @@
 	  </div>
 	  <main>
 		  <section class="abt_us1 container">
-			  <h1 class="abt_us1__title">About us</h1>
+			  <h1 class="abt_us1__title">
+				  À propos de nous
+			  </h1>
 		  </section>
 		  <section class="abt_us2 container">
 			  <img src="../public/aboutus_banner.jpg" alt="" class="abt_us2__img">
@@ -78,15 +80,21 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
 				  <a href="./contact.html">
-					  <button class="blue_btn custom_btn on_scroll">CALL US TODAY</button>
+					  <button class="blue_btn custom_btn on_scroll">
+						  Appelez-nous dès aujourd’hui
+					  </button>
 				  </a>
 			  </div>
 		  </section>
 		  <section class="abt_us3 container">
 			  <div class="abt3__s1">
 				  <div class="abt3__s1__left">
-					  <p class="abt3__s1__left__top">our work prosess</p>
-					  <p class="abt3__s1__left__buttom">we take care of everything</p>
+					  <p class="abt3__s1__left__top">
+					  Notre approche
+					  </p>
+					  <p class="abt3__s1__left__buttom">
+					  Une prise en charge complète
+					  </p>
 				  </div>
 				  <p class="abt3__s1__right">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
