--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,6 @@
 		  </a>
 		  <nav>
 		  	<ul class="header__menu">
-		  		<!-- <li> <a class="header__link" href="./portfolio.html">Portfolio</a></li> -->
 		  		<li> <a class="header__link" href="./services.html">Services</a></li>
 		  		<li> <a class="header__link" href="./a_propos.html">À propos</a></li>
 		  		<li> <a class="header__link clr_red" href="#">Contact</a></li>
@@ -40,9 +39,6 @@
 	  <div class="mobile-nav">
 		  <nav>
 		  	<ul class="mobile-nav__menu">
-				<!-- <li> -->
-				<!-- 	<a href="./portfolio.html" class="mobile-nav__link">Portfolio<a/> -->
-				<!-- </li> -->
 				<li>
 					<a href="./services.html" class="mobile-nav__link">Services<a/>
 				</li>
@@ -65,15 +61,17 @@
 	  </div>
 	  <main>
 		  <section class="contact_section1 container">
-			  <h1 class="cs1__banner">contact us</h1>
+			  <h1 class="cs1__banner">
+				  Discutons ensemble
+			  </h1>
 		  </section>
 		  <section class="contact_section2 container">
 			  <div class="cs2__left container">
 				  <div class="cs2__left__top">
-					  contact us
+					  Nous contacter
 				  </div>
 				  <div class="cs2__left__title">
-					  Get in touch
+					  Parlons-en
 				  </div>
 				  <div class="cs2__left__text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus 
@@ -85,7 +83,7 @@
 						  </svg>
 						  <div class="cs2l__minilist__content">
 							  <div class="cs2lm__title">
-								  phone
+								  téléphone
 							  </div>
 							  <a href="tel:0340821676" class="cs2l__link">(+261) 34 08 216 76</a>
 						  </div>
@@ -98,7 +96,9 @@
 							  <div class="cs2lm__title">
 								  email
 							  </div>
-							  <a href="mailto:example@somewhere.com" class="cs2l__link">example@mail.com</a>
+							  <a href="mailto:arb.rinah22@gmail.com" class="cs2l__link">
+								  arb.rinah22@gmail.com
+							  </a>
 						  </div>
 					  </div>
 					  <div class="cs2__left__minilist on_scroll">
@@ -108,7 +108,7 @@
 						  </svg>
 						  <div class="cs2l__minilist__content">
 							  <div class="cs2lm__title">
-								  localization
+								  localisation
 							  </div>
 							  <a href="#" class="cs2l__link">Antananarive</a>
 						  </div>
@@ -122,27 +122,28 @@
 				<form action="https://api.web3forms.com/submit" method="POST" class="cs2__right container">
   					<input type="hidden" name="from_name" value="WALservice">
   					<input type="hidden" name="subject" value="WALservice contact form">
-					<!-- <input type="hidden" name="access_key" value="6886032e-7244-45e3-bd6c-7593fbdadf7d"> -->
 					<input type="hidden" name="access_key" value="e7ee061b-8ee6-4126-a89f-9ce2760f1bf2">
   					<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 					<div class="cs2r__section">
-						<label for="name">Name</label>
-						<input type="text" name="name" placeholder="name" class="cs2r__inputs" required>
+						<label for="name">Nom</label>
+						<input type="text" name="name" placeholder="Nom" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
 						<label for="email">Email</label>
 						<input type="email" name="email" placeholder="email" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
-						<label for="phone">Phone</label>
-						<input type="tel" id="phone" pattern="[0-9]{10}" name="phone" placeholder="phone" class="cs2r__inputs" required>
+						<label for="phone">
+							Téléphone
+						</label>
+						<input type="tel" id="phone" pattern="[0-9]{10}" name="phone" placeholder="Téléphone" class="cs2r__inputs" required>
 					</div>
 					<div class="cs2r__section">
 						<label for="message">Message</label>
 						<textarea name="message" id="message" placeholder="Message" class="cs2r__inputs__msg" required></textarea>
 					</div>
 					<div class="cs2r__btn">
-						<button class="blue_btn custom_btn on_scroll">Send Message</button>
+						<button class="blue_btn custom_btn on_scroll">Envoyer</button>
 					</div>
 			  	</form>
 			  </div>
