--- a/pages/services.html
+++ b/pages/services.html
@@ -32,9 +32,11 @@
   				<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
 			</svg>
 		  </button>
-		  <button class="header__call_to_action custom_btn blue_btn"><a href="#"></a>
-			  Get Started
+		<a href="./contact.html">
+		  <button class="header__call_to_action custom_btn blue_btn">
+			  	Commencer
 		  </button>
+		</a>
 	  </header>
 	  <div class="mobile-nav">
 		  <nav>
@@ -79,25 +81,11 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
 				  <a href="./contact.html">
-				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  	<button class="white_btn custom_btn on_scroll">
+						Contactez-nous dès maintenant
+					</button>
 				  </a>
 			  </div>
-			  <!-- <div class="abt_us2__content"> -->
-			  <!--  <p class="ab2c__top">minitopper</p> -->
-			  <!--  <p class="ab2c__title on_scroll"> -->
-			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. -->
-			  <!--  </p> -->
-			  <!--  <p class="ab2c__content"> -->
-			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
-			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
-			  <!-- 	<br> -->
-			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
-			  <!-- 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus -->
-			  <!--  </p> -->
-			  <!--  <a href="./contact.html"> -->
-			  <!--  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button> -->
-			  <!--  </a> -->
-			  <!-- </div> -->
 		  </section>
 		  <section class="abt_us2 reverse_section container">
 			  <img src="../public/service_img2.avif" alt="" class="abt_us2__img">
@@ -114,7 +102,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
 				  <a href="./contact.html">
-				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  	<button class="white_btn custom_btn on_scroll">
+						Contactez-nous dès maintenant
+					</button>
 				  </a>
 			  </div>
 		  </section>
@@ -133,7 +123,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
 				  <a href="./contact.html">
-				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  	<button class="white_btn custom_btn on_scroll">
+						Contactez-nous dès maintenant
+					</button>
 				  </a>
 			  </div>
 		  </section>
@@ -152,7 +144,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mattis mattis libero at dignissim. Donec faucibus
 				  </p>
 				  <a href="./contact.html">
-				  	<button class="white_btn custom_btn on_scroll">CALL US TODAY</button>
+				  	<button class="white_btn custom_btn on_scroll">
+						Contactez-nous dès maintenant
+					</button>
 				  </a>
 			  </div>
 		  </section>
